--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
               <blockquote>
                 <h1>Привет! Я Анна Зеленцова</h1>
                 <p>QA Engineer</p>
+                <h1>которого не хватает в Вашей компании</h1>
               </blockquote>
                 <p align= center>Стеки</p>
               </div>
